a lot of changes

--- a/index.html
+++ b/index.html
@@ -17,31 +17,62 @@
                 <li><a href="#games" class="nav-links">Games</a></li>
                 <li><a href="#participate" class="nav-links">Participate</a></li>
             </ul>
-            </nav>
+        </nav>
         <section id="home">
-          <h1>DPSI ESPORTS</h1>
-        </section>
-        <section id="about">
-            
-        </section>
-        <section id="games">
-            <div class="card">
-                <div class="card-content">
-                    <h2 class="card-title">
-                        Valorant
-                    </h2>
-                    <p class="card-body">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, qui?
-                    </p>
-                    <a href="#" class="button">learn more</a>
+            <div class="home_contain">     
+                <div class="image_home">
+                    <img src="images/final/nb.png" alt="" srcset="">
+                </div>
+                <div class="text-home">
+                    <h1 class="home_head">DPSI ESPORTS</h1>
+                    <h1 style="font-size: 2em; text-align: right;" class="season">Season 2</h1>
+
+                    <!-- <img src="images/final/nb.png" alt="" srcset=""> -->
                 </div>
             </div>
         </section>
+        <section id="about">
+            <h1 class="about_heading">Trailer</h1>
+            <video controls width="250" controlsList="nodownload" autoplay="" muted>
+                <source src="videos/e_traiiler.MP4" autoplay="true" >            
+                Sorry, your browser doesn't support embedded videos.
+            </video>
+        </section>
+        <section id="games">
+            <div class="contain">
+                <div class="card">
+                    <div class="card-content">
+                        <h2 class="card-title">
+                            Valorant
+                        </h2>
+                        <p class="card-body">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, qui?
+                        </p>
+                        <a href="#" class="button">learn more</a>
+                    </div>
+                </div>
+                <div class="card" 
+                style=
+                "background-image: url('images/rl.jpg');
+                ">
+                    <div class="card-content">
+                        <h2 class="card-title">
+                            Rocket League
+                        </h2>
+                        <p class="card-body">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, qui?
+                        </p>
+                        <a href="#" class="button">learn more</a>
+                    </div>  
+                </div>
+                <button class="mob-btn">Hello</button>
+            </div>
+        </section>
         <section id="participate">
-            <h1>Contact</h1>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, quis!</p>
+            <h1 class="p_text">Interested? Register now</h1>
+            <p class="p_para">Click <a href="#">here</a> to view the rules before registering.</p>
+            <a href="#" class="btn_register">Register</a>
         </section>
     </div>
-    <!-- https://www.youtube.com/watch?v=5DEq5cWNYt8 -->
 </body>
 </html>
