Added rulebook; Removed card btns

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p class="card-body">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, qui?
                         </p>
-                        <a href="#" class="button">learn more</a>
+                        <a href="#" class="button" style="display: none;">learn more</a>
                     </div>
                 </div>
                 <div class="card" 
@@ -62,7 +62,7 @@
                         <p class="card-body">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, qui?
                         </p>
-                        <a href="#" class="button">learn more</a>
+                        <a href="#" class="button" style="display: none;">learn more</a>
                     </div>  
                 </div>
                 <button class="mob-btn">Hello</button>
@@ -70,7 +70,7 @@
         </section>
         <section id="participate">
             <h1 class="p_text">Interested? Register now</h1>
-            <p class="p_para">Click <a href="#">here</a> to view the rules before registering.</p>
+            <p class="p_para">Click <a href="./files/DPSI_Esports_Rulebook.pdf" target="__blank">here</a> to donwload and read the rules before registering.</p>
             <a href="#" class="btn_register">Register</a>
         </section>
     </div>
