changed image, responsive, removed video, links

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <nav class="navbar">
             <ul>
                 <li><a href="#home" class="nav-links">Home</a></li>
-                <li><a href="#about" class="nav-links">About</a></li>
                 <li><a href="#games" class="nav-links">Games</a></li>
                 <li><a href="#participate" class="nav-links">Participate</a></li>
+                <li><a href="#about" class="nav-links">About</a></li>
             </ul>
         </nav>
         <section id="home">
             <div class="home_contain">     
                 <div class="image_home">
-                    <img src="images/final/nb.png" alt="" srcset="">
+                    <img src="images/final/logo.png" alt="" srcset="">
                 </div>
                 <div class="text-home">
                     <h1 class="home_head">DPSI ESPORTS</h1>
@@ -30,13 +30,6 @@
                     <!-- <img src="images/final/nb.png" alt="" srcset=""> -->
                 </div>
             </div>
-        </section>
-        <section id="about">
-            <h1 class="about_heading">Trailer</h1>
-            <video controls width="250" controlsList="nodownload" autoplay="" muted>
-                <source src="videos/e_traiiler.MP4" autoplay="true" >            
-                Sorry, your browser doesn't support embedded videos.
-            </video>
         </section>
         <section id="games">
             <div class="contain">
@@ -65,13 +58,23 @@
                         <a href="#" class="button" style="display: none;">learn more</a>
                     </div>  
                 </div>
-                <button class="mob-btn">Hello</button>
             </div>
         </section>
         <section id="participate">
             <h1 class="p_text">Interested? Register now</h1>
-            <p class="p_para">Click <a href="./files/DPSI_Esports_Rulebook.pdf" target="__blank">here</a> to donwload and read the rules before registering.</p>
-            <a href="#" class="btn_register">Register</a>
+            <p class="p_para">Click <a href="./files/DPSI_Esports_Rulebook (1).pdf" target="__blank">here</a> to download </p>
+            <p class="p_para" style="position: relative; bottom: 20px;">and read the rules before registering.</p>
+            <div class="participate-contain">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSftnpr-Cn2KQ-jQztE9DP2zCLrrtpiwiPHeSFqMYx3t3XaCDQ/viewform" class="btn_register" style="margin: 0 20px;" target="__blank">Valorant Registration</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3z3LN5PxuouEenMdIgPEm_lNM1BVvIHNuScRLaQYO_J112g/viewform" class="btn_register" target="__blank">Rocket League Registration</a>
+            </div>
+        </section>
+        <section id="about">
+            <h1 class="about_heading">Trailer Coming Soon</h1>
+            <!-- <video controls width="250" controlsList="nodownload" autoplay="" muted>
+                <source src="videos/e_traiiler.MP4" autoplay="true" >            
+                Sorry, your browser doesn't support embedded videos.
+            </video> -->
         </section>
     </div>
 </body>
