add game desc; del img

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             Valorant
                         </h2>
                         <p class="card-body">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, qui?
+                            Creativity, ingenuity, and a good ol’ trigger finger. You’ll need all three to come out on top of the Valorant tournament.
                         </p>
                         <a href="#" class="button" style="display: none;">learn more</a>
                     </div>
@@ -53,7 +53,7 @@
                             Rocket League
                         </h2>
                         <p class="card-body">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, qui?
+                            Run rings around your opponents (literally) in the Rocket League 1v1 Soccar tournament.
                         </p>
                         <a href="#" class="button" style="display: none;">learn more</a>
                     </div>  
