added last date for registration

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <h1 class="p_text">Interested? Register now</h1>
             <p class="p_para">Click <a href="./files/DPSI_Esports_Rulebook (1).pdf" target="__blank">here</a> to download </p>
             <p class="p_para" style="position: relative; bottom: 20px;">and read the rules before registering.</p>
+            <p class="p_para" style="position: relative; bottom: 20px;">Last day to register is 29<sup>th</sup> January</p>
             <div class="participate-contain">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSftnpr-Cn2KQ-jQztE9DP2zCLrrtpiwiPHeSFqMYx3t3XaCDQ/viewform" class="btn_register" style="margin: 0 20px;" target="__blank">Valorant Registration</a>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3z3LN5PxuouEenMdIgPEm_lNM1BVvIHNuScRLaQYO_J112g/viewform" class="btn_register" target="__blank">Rocket League Registration</a>
