--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#home" class="nav-links">Home</a></li>
                 <li><a href="#games" class="nav-links">Games</a></li>
                 <li><a href="#participate" class="nav-links">Participate</a></li>
-                <li><a href="#about" class="nav-links">About</a></li>
+                <li><a href="#about" class="nav-links">about</a></li>
             </ul>
         </nav>
         <section id="home">
@@ -71,11 +71,11 @@
             </div>
         </section>
         <section id="about">
-            <h1 class="about_heading">Trailer Coming Soon</h1>
-            <!-- <video controls width="250" controlsList="nodownload" autoplay="" muted>
-                <source src="videos/e_traiiler.MP4" autoplay="true" >            
+            <h1 class="about_heading">Trailer</h1>
+            <video controls width="250" controlsList="nodownload" autoplay="">
+                <source src="videos/FINAL.mp4" autoplay="true" >            
                 Sorry, your browser doesn't support embedded videos.
-            </video> -->
+            </video>
         </section>
     </div>
 </body>
