--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </section>
         <section id="about">
             <h1 class="about_heading">Trailer</h1>
-            <video controls width="250" controlsList="nodownload" autoplay="">
-                <source src="videos/FINAL.mp4" autoplay="true" >            
+            <video controls width="250" controlsList="nodownload">
+                <source src="videos/FINAL.mp4">            
                 Sorry, your browser doesn't support embedded videos.
             </video>
         </section>
