--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section id="about">
             <h1 class="about_heading">Trailer</h1>
             <video controls width="250" controlsList="nodownload">
-                <source src="videos/FINAL.mp4">            
+                <source src="videos/video_final_esports.mp4">            
                 Sorry, your browser doesn't support embedded videos.
             </video>
         </section>
