--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </section>
         <section id="about">
             <h1 class="about_heading">Trailer</h1>
-            <video controls width="250" controlsList="nodownload">
+            <video controls>
                 <source src="videos/video_final_esports.mp4">            
                 Sorry, your browser doesn't support embedded videos.
             </video>
